--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,20 @@ services:
       retries: 30
       start_period: 5s
 
+  opa:
+    image: openpolicyagent/opa:0.64.1
+    restart: unless-stopped
+    command: ["run", "--server", "--log-level=info", "/policies"]
+    ports:
+      - "18181:8181"
+    volumes:
+      - ./policy/opa:/policies:ro
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8181/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+
   frostgate-core:
     build:
       context: .
@@ -63,6 +77,8 @@ services:
       redis:
         condition: service_healthy
       nats:
+        condition: service_healthy
+      opa:
         condition: service_healthy
     command: ["uvicorn","api.main:app","--host","0.0.0.0","--port","8080","--no-access-log"]
     ports:
@@ -96,6 +112,12 @@ services:
 
       # NATS URL for ingestion bus
       FG_NATS_URL: ${FG_NATS_URL:-nats://nats:4222}
+
+      # OPA policy evaluation
+      FG_OPA_URL: ${FG_OPA_URL:-http://opa:8181}
+      FG_OPA_PATH: ${FG_OPA_PATH:-/v1/data/frostgate/defend}
+      FG_OPA_TIMEOUT_SEC: ${FG_OPA_TIMEOUT_SEC:-0.25}
+      FG_OPA_ENFORCE: ${FG_OPA_ENFORCE:-false}
 
       # Rate limiting
       FG_RL_ENABLED: ${FG_RL_ENABLED:-true}
