--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     volumes:
       - ./policy/opa:/policies:ro
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8181/health"]
+      test: ["CMD", "/opa", "eval", "--format=raw", "--data", "/policies", "data.frostgate.defend.allow"]
       interval: 5s
       timeout: 3s
       retries: 20
