--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,6 +203,47 @@ jobs:
             state/**
           if-no-files-found: ignore
 
+  db_postgres_verify:
+    name: DB Postgres Verify (db-postgres-verify)
+    runs-on: ubuntu-latest
+    needs: unit
+    if: ${{ always() && needs.unit.result == 'success' }}
+    env:
+      FG_ENV: dev
+      FG_AUTH_ENABLED: "1"
+      FG_DB_BACKEND: postgres
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Generate CI secrets
+        uses: ./.github/actions/fg-secrets
+
+      - name: Python setup (cached)
+        uses: ./.github/actions/fg-python-setup
+        with:
+          python-version: "3.12"
+          install-os-deps: "true"
+          prepare-workspace: "true"
+          build-venv: "true"
+
+      - name: Write docker compose env
+        run: |
+          set -euo pipefail
+          cat > .env <<EOF
+          POSTGRES_USER=fg_user
+          POSTGRES_DB=frostgate
+          POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+          EOF
+
+      - name: Run Postgres verification lane
+        run: |
+          set -euo pipefail
+          export FG_DB_BACKEND=postgres
+          export FG_DB_URL="postgresql+psycopg://fg_user:${POSTGRES_PASSWORD}@localhost:5432/frostgate"
+          make db-postgres-verify
+
   admin:
     name: Admin Gateway (ci-admin)
     runs-on: ubuntu-latest
