--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ redis==7.1.0
 alembic==1.11.1
 psycopg[binary]==3.3.2
 sqlalchemy==2.0.20
+sqlparse==0.5.0
 python-jose>=3.3.0
 itsdangerous>=2.1.2
 python-json-logger>=2.0.0
