Fix sqlite tenant defaults and postgres test gating

--- a/pytest.ini
+++ b/pytest.ini
@@ -15,6 +15,7 @@ markers =
     e2e_http: HTTP e2e tests against a running server
     integration: hits real running server
     asyncio: async tests
+    postgres: postgres-only tests
 
 # =============================================================================
 # Filter Warnings
