--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,9 @@ jobs:
               - '.github/**'
               - 'CONTRACT.md'
               - 'README.md'
+              - 'policy/**'
+              - 'migrations/**'
+              - 'scripts/**'
             console:
               - 'console/**'
               - 'package.json'
@@ -90,13 +93,8 @@ jobs:
       - name: Syntax / import guard (fast fail)
         run: python -m compileall -q api engine tests
 
-      - name: Run DoS hardening guard checks
-        run: make dos-hardening-check
-        env:
-          FG_API_KEY: ${{ env.FG_API_KEY }}
-
-      - name: Run fg-fast guard tests (lock regression)
-        run: pytest -q tests/test_ingest_bus.py tests/test_security_middleware.py
+      - name: Run fg-fast guard lane (lock regression)
+        run: make fg-fast
         env:
           FG_API_KEY: ${{ env.FG_API_KEY }}
 
@@ -114,7 +112,8 @@ jobs:
     name: Unit (ci)
     runs-on: ubuntu-latest
     needs: fg_guard
-    if: ${{ github.event_name == 'push' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
+    # Full PR workflow: always run on PR; gate on push using path filters.
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     env:
       FG_ENV: dev
       FG_AUTH_ENABLED: "1"
@@ -212,13 +211,15 @@ jobs:
     name: DB Postgres Verify
     runs-on: ubuntu-latest
     needs: fg_guard
+    # Full PR workflow: always run on PR; gate on push using path filters.
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     env:
       FG_ENV: test
       FG_DB_BACKEND: postgres
       POSTGRES_USER: fg_user
       POSTGRES_DB: frostgate
       POSTGRES_PASSWORD: fg_password
-      FG_DB_URL: postgresql+psycopg://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@127.0.0.1:5432/${{ env.POSTGRES_DB }}
+      FG_DB_URL: postgresql+psycopg://fg_user:fg_password@127.0.0.1:5432/frostgate
 
     steps:
       - name: Checkout
@@ -244,7 +245,7 @@ jobs:
     name: Admin Gateway (ci-admin)
     runs-on: ubuntu-latest
     needs: fg_guard
-    if: ${{ github.event_name == 'push' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     env:
       FG_ENV: dev
       FG_AUTH_ENABLED: "1"
@@ -272,7 +273,7 @@ jobs:
     name: Console (ci-console)
     runs-on: ubuntu-latest
     needs: fg_guard
-    if: ${{ github.event_name == 'push' || needs.fg_guard.outputs.console == 'true' }}
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.console == 'true' }}
 
     steps:
       - name: Checkout
@@ -297,7 +298,7 @@ jobs:
     name: PT (ci-pt)
     runs-on: ubuntu-latest
     needs: fg_guard
-    if: ${{ github.event_name == 'push' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     env:
       FG_ENV: dev
       FG_AUTH_ENABLED: "1"
@@ -325,7 +326,7 @@ jobs:
     name: Hardening Gates (ci-hardening)
     runs-on: ubuntu-latest
     needs: fg_guard
-    if: ${{ github.event_name == 'push' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.core == 'true' || needs.fg_guard.outputs.python == 'true' }}
     env:
       FG_ENV: dev
       FG_AUTH_ENABLED: "1"
@@ -345,7 +346,6 @@ jobs:
       - name: Verify FG_API_KEY is set
         run: python -c "import os; assert os.getenv('FG_API_KEY')"
 
-      # ✅ NEW: enforce invariants inside hardening job (prevents INV-004 regression)
       - name: Run Core Invariants (INV-001..INV-007)
         run: make test-core-invariants
         env:
@@ -364,7 +364,7 @@ jobs:
     name: Compliance Gates
     runs-on: ubuntu-latest
     needs: fg_guard
-    if: ${{ github.event_name == 'push' || needs.fg_guard.outputs.compliance == 'true' }}
+    if: ${{ github.event_name == 'pull_request' || needs.fg_guard.outputs.compliance == 'true' }}
     env:
       FG_ENV: dev
       FG_AUTH_ENABLED: "1"
