--- a/pytest.ini
+++ b/pytest.ini
@@ -15,6 +15,7 @@ markers =
     e2e_http: HTTP e2e tests against a running server
     integration: hits real running server
     asyncio: async tests
+    postgres: requires Postgres (FG_DB_BACKEND=postgres + FG_DB_URL)
 
 # =============================================================================
 # Filter Warnings
