--- a/admin_gateway/requirements-dev.txt
+++ b/admin_gateway/requirements-dev.txt
@@ -1,5 +1,6 @@
 # Admin Gateway dev dependencies
 pytest>=8.0.0,<9.0.0
 pytest-asyncio>=0.23.0,<1.0.0
+pytest-cov>=7.0.0,<8.0.0
 httpx>=0.26.0,<1.0.0
 ruff>=0.2.0
