--- a/admin_gateway/requirements.txt
+++ b/admin_gateway/requirements.txt
@@ -1,13 +1,14 @@
 # Admin Gateway dependencies
-fastapi==0.115.0
-starlette==0.38.6
+fastapi==0.120.4
+starlette==0.49.1
 uvicorn[standard]==0.30.0
 pydantic==2.9.0
 pydantic-core==2.23.2
 typing-extensions==4.15.0
 python-json-logger>=2.0.0,<3.0.0
 httpx>=0.26.0,<1.0.0
-python-jose>=3.3.0,<4.0.0
+PyJWT[crypto]==2.9.0
+cryptography==46.0.4
 itsdangerous>=2.1.2,<3.0.0
 # Database
 sqlalchemy>=2.0.0,<3.0.0
