--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.115.0
+fastapi==0.120.4
+starlette==0.49.1
 uvicorn[standard]==0.30.0
 pydantic==2.9.0
 pydantic-settings==2.5.2
@@ -7,11 +8,11 @@ loguru==0.7.2
 python-dotenv==1.0.1
 prometheus-fastapi-instrumentator==7.1.0
 redis==7.1.0
+cryptography==46.0.4
 alembic==1.11.1
 psycopg[binary]==3.3.2
 sqlalchemy==2.0.20
 sqlparse==0.5.0
-python-jose>=3.3.0
 itsdangerous>=2.1.2
 python-json-logger>=2.0.0
 aiosqlite>=0.19.0
